force-app/main/default/objects/Account.object
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>