force-app/main/default/objects/Account/fields/Abbreviated_Name__c.field-meta.xml
<CustomField>
    <fullName>Abbreviated_Name__c</fullName>
    <description>Displays a shortened version of the Account name.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Displays a shortened version of the Account name.</inlineHelpText>
    <label>Abbreviated Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>