force-app/main/default/objects/Account/fields/Account_Record_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type_Text__c</fullName>
    <defaultValue>$RecordType.Name</defaultValue>
    <description>Account Record Type Text field to allow for Account Matching rules to only compare records of the same record type.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Record Type (Text)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>