force-app/main/default/objects/Account/fields/Alt_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Alt_End_Date__c</fullName>
    <description>End date for Alternative Shipping Address.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Alternative Shipping Address End Date</label>
    <type>Date</type>
</CustomField>