force-app/main/default/objects/Account/fields/Alt_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Alt_Shipping_City__c</fullName>
    <description>Shipping City for Alternative Shipping Address.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Alternative Shipping City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>