force-app/main/default/objects/Account/fields/Alt_Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Alt_Shipping_State__c</fullName>
    <description>Start date for Alternative Shipping Address.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Alternative Shipping State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>