force-app/main/default/objects/Account/fields/Alt_Shipping_Street_1__c.field-meta.xml
<CustomField>
    <fullName>Alt_Shipping_Street_1__c</fullName>
    <description>Shipping Street 1 for Alternative Shipping Address.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Alternative Shipping Address Line 1</label>
    <type>TextArea</type>
</CustomField>