force-app/main/default/objects/Account/fields/Alt_Shipping_Zip__c.field-meta.xml
<CustomField>
    <fullName>Alt_Shipping_Zip__c</fullName>
    <description>Shipping Zip  for Alternative Shipping Address.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Alternative Shipping Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>