force-app/main/default/objects/Account/fields/Alt_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Alt_Start_Date__c</fullName>
    <description>Start date for Alternative Shipping Address.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Alternative Shipping Address Start Date</label>
    <type>Date</type>
</CustomField>