force-app/main/default/objects/Account/fields/Alternative_Address_Request__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Address_Request__c</fullName>
    <label>Alternative Address Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>