force-app/main/default/objects/Account/fields/AutomatedPlacementExclude__c.field-meta.xml
<CustomField>
    <fullName>AutomatedPlacementExclude__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Exclude the School from AutoPlacement</description>
    <label>Excluded from Automated Placement</label>
    <type>Checkbox</type>
</CustomField>