force-app/main/default/objects/Account/fields/AutomatedPlacementMaxCutoff__c.field-meta.xml
<CustomField>
    <fullName>AutomatedPlacementMaxCutoff__c</fullName>
    <description>The maximum Automated Placement Score a student can have and still be eligible for the Auto-Placement process. This value is set for Academic Program Accounts.</description>
    <label>Automated Placement Max Cutoff</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>