force-app/main/default/objects/Account/fields/Calculated_ID__c.field-meta.xml
<CustomField>
    <fullName>Calculated_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Calculated ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>