force-app/main/default/objects/Account/fields/CEIntegrationFlag__c.field-meta.xml
<CustomField>
    <fullName>CEIntegrationFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CEIntegrationFlag</label>
    <type>Checkbox</type>
</CustomField>