force-app/main/default/objects/Account/fields/CELeadId__c.field-meta.xml
<CustomField>
    <fullName>CELeadId__c</fullName>
    <description>To hold Lead id from CE org</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CELeadId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>