force-app/main/default/objects/Account/fields/City_Town_MA__c.field-meta.xml
<CustomField>
    <fullName>City_Town_MA__c</fullName>
    <description>The city and town within MA that the household is located in. (Massachusetts only)</description>
    <label>City/Town</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001 Abington</fullName>
            </value>
            <value>
                <fullName>002 Acton</fullName>
            </value>
            <value>
                <fullName>003 Acushnet</fullName>
            </value>
            <value>
                <fullName>004 Adams (non-op)</fullName>
            </value>
            <value>
                <fullName>005 Agawam</fullName>
            </value>
            <value>
                <fullName>006 Alford (non-op)</fullName>
            </value>
            <value>
                <fullName>007 Amesbury</fullName>
            </value>
            <value>
                <fullName>008 Amherst</fullName>
            </value>
            <value>
                <fullName>009 Andover</fullName>
            </value>
            <value>
                <fullName>010 Arlington</fullName>
            </value>
            <value>
                <fullName>011 Ashburnham (non-op)</fullName>
            </value>
            <value>
                <fullName>012 Ashby (non-op)</fullName>
            </value>
            <value>
                <fullName>013 Ashfield (non-op)</fullName>
            </value>
            <value>
                <fullName>014 Ashland</fullName>
            </value>
            <value>
                <fullName>015 Athol (non-op)</fullName>
            </value>
            <value>
                <fullName>016 Attleboro</fullName>
            </value>
            <value>
                <fullName>017 Auburn</fullName>
            </value>
            <value>
                <fullName>018 Avon</fullName>
            </value>
            <value>
                <fullName>019 Ayer</fullName>
            </value>
            <value>
                <fullName>020 Barnstable</fullName>
            </value>
            <value>
                <fullName>021 Barre (non-op)</fullName>
            </value>
            <value>
                <fullName>022 Becket (non-op)</fullName>
            </value>
            <value>
                <fullName>023 Bedford</fullName>
            </value>
            <value>
                <fullName>024 Belchertown</fullName>
            </value>
            <value>
                <fullName>025 Bellingham</fullName>
            </value>
            <value>
                <fullName>026 Belmont</fullName>
            </value>
            <value>
                <fullName>027 Berkley</fullName>
            </value>
            <value>
                <fullName>028 Berlin</fullName>
            </value>
            <value>
                <fullName>029 Bernardston (non-op)</fullName>
            </value>
            <value>
                <fullName>030 Beverly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>