force-app/main/default/objects/Account/fields/Computer_in_Home__c.field-meta.xml
<CustomField>
    <fullName>Computer_in_Home__c</fullName>
    <description>Indicator of whether or not the family has a computer in their home.</description>
    <label>Do you have a computer in your home</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>