force-app/main/default/objects/Account/fields/Confirmation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_End_Date__c</fullName>
    <description>The date/time that final confirmation stops being available to CTs.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Confirmation End</label>
    <type>DateTime</type>
</CustomField>