force-app/main/default/objects/Account/fields/Confirmation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Start_Date__c</fullName>
    <description>The date/time that final confirmation will become available to CTs.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Confirmation Start</label>
    <type>DateTime</type>
</CustomField>