force-app/main/default/objects/Account/fields/County_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>County_of_Residence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The current county of residence for the household.</description>
    <label>County of Residence</label>
    <referenceTo>Residency__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>