force-app/main/default/objects/Account/fields/Different_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Different_Billing_Address__c</fullName>
    <description>For the caretaker to indicate if they have a separate billing address. If they do not, they do not have to update the Billing Address fields.</description>
    <label>Different Billing Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>