force-app/main/default/objects/Account/fields/Disciplinary_Action_Ever_Suspended__c.field-meta.xml
<CustomField>
    <fullName>Disciplinary_Action_Ever_Suspended__c</fullName>
    <label>Disciplinary Action Ever Suspended</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Withdraw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>