force-app/main/default/objects/Account/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Display Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>