force-app/main/default/objects/Account/fields/District_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>District_of_Residence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The current school district of residence for the household.</description>
    <label>District of Residence</label>
    <referenceTo>Residency__c</referenceTo>
    <relationshipLabel>Accounts (District of Residence)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>