force-app/main/default/objects/Account/fields/Document_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_End_Date__c</fullName>
    <description>The date/time that document submission stops being available to CTs.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Submission End</label>
    <type>DateTime</type>
</CustomField>