force-app/main/default/objects/Account/fields/Document_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Start_Date__c</fullName>
    <description>The date/time that document submission will become available to CTs.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Submission Start</label>
    <type>DateTime</type>
</CustomField>