force-app/main/default/objects/Account/fields/Document_Submission_End__c.field-meta.xml
<CustomField>
    <fullName>Document_Submission_End__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Submission End</label>
    <type>DateTime</type>
</CustomField>