force-app/main/default/objects/Account/fields/Document_Submission_Start__c.field-meta.xml
<CustomField>
    <fullName>Document_Submission_Start__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Submission Start</label>
    <type>DateTime</type>
</CustomField>