force-app/main/default/objects/Account/fields/Electives_Exclude_from_Auto_Course_Sel__c.field-meta.xml
<CustomField>
    <fullName>Electives_Exclude_from_Auto_Course_Sel__c</fullName>
    <description>Electives Exclude from Auto Course Selection</description>
    <label>Electives Exclude from Auto Course Sel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Art</fullName>
            </value>
            <value>
                <fullName>Educational Technology</fullName>
            </value>
            <value>
                <fullName>Health and Physical Education 8</fullName>
            </value>
            <value>
                <fullName>Home Life</fullName>
            </value>
            <value>
                <fullName>Middle School Career Exploration I</fullName>
            </value>
            <value>
                <fullName>Middle School Digital Art and Design</fullName>
            </value>
            <value>
                <fullName>Middle School Journalism</fullName>
            </value>
            <value>
                <fullName>Middle Sign Language</fullName>
            </value>
            <value>
                <fullName>Middle Spanish</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Theater</fullName>
            </value>
            <value>
                <fullName>WebQuest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>