force-app/main/default/objects/Account/fields/Enrollment_Stop_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Stop_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrollment Cutoff Date</label>
    <type>DateTime</type>
</CustomField>