force-app/main/default/objects/Account/fields/Family_Enrollment_Counselor__c.field-meta.xml
<CustomField>
    <fullName>Family_Enrollment_Counselor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US: 120471
Name of the FEC assisting this Household</description>
    <label>Family Enrollment Counselor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>