force-app/main/default/objects/Account/fields/FARM_Elig_Inc_Red_Meals_Addl_Per_Person__c.field-meta.xml
<CustomField>
    <fullName>FARM_Elig_Inc_Red_Meals_Addl_Per_Person__c</fullName>
    <label>FARM Elig Inc Red Meals Addl Per Person</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>