force-app/main/default/objects/Account/fields/FARM_Elig_Inc_Red_Meals_HH_Size_of_1__c.field-meta.xml
<CustomField>
    <fullName>FARM_Elig_Inc_Red_Meals_HH_Size_of_1__c</fullName>
    <label>FARM Elig Inc Red Meals HH Size of 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>