force-app/main/default/objects/Account/fields/Fed_Poverty_Elig_Inc_Addl_Per_Person__c.field-meta.xml
<CustomField>
    <fullName>Fed_Poverty_Elig_Inc_Addl_Per_Person__c</fullName>
    <label>Fed Poverty Elig Inc Addl Per Person</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>