force-app/main/default/objects/Account/fields/First_Semester_End__c.field-meta.xml
<CustomField>
    <fullName>First_Semester_End__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Semester End</label>
    <type>Date</type>
</CustomField>