force-app/main/default/objects/Account/fields/FirstDayforStudents__c.field-meta.xml
<CustomField>
    <fullName>FirstDayforStudents__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Day of School for Students</label>
    <type>Date</type>
</CustomField>