force-app/main/default/objects/Account/fields/FirstDaySecondSemester__c.field-meta.xml
<CustomField>
    <fullName>FirstDaySecondSemester__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Day of the Second Semester</label>
    <type>Date</type>
</CustomField>