force-app/main/default/objects/Account/fields/Grade7Math__c.field-meta.xml
<CustomField>
    <fullName>Grade7Math__c</fullName>
    <label>AutoPlacement 7th Grade Math</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Essential Math 7</fullName>
            </value>
            <value>
                <fullName>Algebra Readiness</fullName>
            </value>
            <value>
                <fullName>Math 7</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>