force-app/main/default/objects/Account/fields/Grade8Math__c.field-meta.xml
<CustomField>
    <fullName>Grade8Math__c</fullName>
    <label>AutoPlacement 8th Grade Math</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Essential Algebra Readiness</fullName>
            </value>
            <value>
                <fullName>Algebra Readiness</fullName>
            </value>
            <value>
                <fullName>Algebra 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>