force-app/main/default/objects/Account/fields/hed__Billing_County__c.field-meta.xml
<CustomField>
    <fullName>hed__Billing_County__c</fullName>
    <description>The county detail for the Billing Address.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing County</label>
    <length>80</length>
    <type>Text</type>
</CustomField>