force-app/main/default/objects/Account/fields/hed__Current_Address__c.field-meta.xml
<CustomField>
    <fullName>hed__Current_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the current Address record for this Account. The Account&apos;s Billing Address field is populated with the address fields from the current Address record.</description>
    <inlineHelpText>The current Address that the Account&apos;s billing fields are filled with.</inlineHelpText>
    <label>Current Address</label>
    <referenceTo>hed__Address__c</referenceTo>
    <relationshipLabel>Accounts (Current Address)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>