force-app/main/default/objects/Account/fields/HH_Last_4_Digits_Signer_SSN__c.field-meta.xml
<CustomField>
    <fullName>HH_Last_4_Digits_Signer_SSN__c</fullName>
    <label>Last 4 Digits SSN</label>
    <length>4</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>