force-app/main/default/objects/Account/fields/Home_Address_Check__c.field-meta.xml
<CustomField>
    <fullName>Home_Address_Check__c</fullName>
    <label>Home Address Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The home address, county and/or district of residence listed above is correct.</fullName>
            </value>
            <value>
                <fullName>The home address, county and/or district of residence listed above has changed.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>