force-app/main/default/objects/Account/fields/Household_Id__c.field-meta.xml
<CustomField>
    <fullName>Household_Id__c</fullName>
    <displayFormat>HH-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Household Id</label>
    <type>AutoNumber</type>
</CustomField>