force-app/main/default/objects/Account/fields/Household_Pin__c.field-meta.xml
<CustomField>
    <fullName>Household_Pin__c</fullName>
    <description>to hold house hold pin of caretaker</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Household PIN</label>
    <length>25</length>
    <type>Text</type>
</CustomField>