force-app/main/default/objects/Account/fields/Internet_Connection_Type__c.field-meta.xml
<CustomField>
    <fullName>Internet_Connection_Type__c</fullName>
    <description>Internet connection type for the household.</description>
    <label>Internet Connection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cable</fullName>
            </value>
            <value>
                <fullName>Dial-up</fullName>
            </value>
            <value>
                <fullName>DSL</fullName>
            </value>
            <value>
                <fullName>Mobile hotspot</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other - High Speed</fullName>
            </value>
            <value>
                <fullName>Satellite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>