force-app/main/default/objects/Account/fields/ITR_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ITR_End_Date__c</fullName>
    <description>This field is used for ITR feature to add ITR End Date value</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ITR End Date</label>
    <type>DateTime</type>
</CustomField>