force-app/main/default/objects/Account/fields/ITR_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ITR_Start_Date__c</fullName>
    <description>This field is created for adding Intend to return start date for academic program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ITR Start Date</label>
    <type>DateTime</type>
</CustomField>