force-app/main/default/objects/Account/fields/LC_HighestLevelofEducation__c.field-meta.xml
<CustomField>
    <fullName>LC_HighestLevelofEducation__c</fullName>
    <description>The highest level of education recieved by the learning coach</description>
    <label>LC Highest Level of Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>College graduate (Bachelor&apos;s degree)</fullName>
            </value>
            <value>
                <fullName>Graduate school / Post-graduate training</fullName>
            </value>
            <value>
                <fullName>High school graduate</fullName>
            </value>
            <value>
                <fullName>I decline to state</fullName>
            </value>
            <value>
                <fullName>Not a high school graduate</fullName>
            </value>
            <value>
                <fullName>Some college or associate&apos;s degree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>