force-app/main/default/objects/Account/fields/Level_of_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Engagement__c</fullName>
    <description>This will allow the FEC Team to identify if the household is active and they need to continue communicating with the family.</description>
    <label>Level of Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Closed-No Longer Interested</fullName>
            </value>
            <value>
                <fullName>Closed-Student Created Account</fullName>
            </value>
            <value>
                <fullName>Recycled-Max Call Attempt Reached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>