force-app/main/default/objects/Account/fields/Living_With_PRNT_LG__c.field-meta.xml
<CustomField>
    <fullName>Living_With_PRNT_LG__c</fullName>
    <label>Living With PRNT LG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>